--- a/cereal-vector.cabal
+++ b/cereal-vector.cabal
@@ -23,3 +23,18 @@ library
                      , vector >= 0.9
                      , cereal == 0.3.*
                      , bytestring >= 0.9
+
+test-suite test
+  type:           exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is:        test.hs
+  other-modules:
+
+  ghc-options:
+    -Wall -O2
+  build-depends:
+    base,
+    vector,
+    cereal,
+    cereal-vector,
+    QuickCheck
